objects/pw_cc__AlternativeStateName__c.object
<CustomObject>
    <description>Provides a list of alternative names which when saved in to the state field get automatically corrected to the parent State Name or Code</description>
    <fields>
        <fullName>pw_cc__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__OriginalState__c</fullName>
        <label>Original State</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Alternative State Names</relationshipLabel>
        <relationshipName>AlternativeStateNames</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Alternative State Name</label>
    <nameField>
        <label>Alternative State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternative State Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>